--- a/portfolio/src/components/Works/works.css
+++ b/portfolio/src/components/Works/works.css
@@ -157,3 +157,99 @@
         opacity: .5;
     }
 }
+
+@media screen and (width: 820px) and (height: 1180px){
+    #works{
+        overflow-x: hidden;
+        margin: 1rem 0 2rem 0;
+    }
+
+    .works-header{
+        max-width: 90vw;
+    }
+    
+    .works-header h1{
+        margin: 0.2rem 0;
+        font-size: 2rem;
+        margin-bottom: .5rem;
+    }
+
+    .works-header h2{
+        margin: 0.2rem 0;
+        font-size: 1rem;
+    }
+
+    
+    .works-content-container{
+        width: 100%;
+        max-width: 90vw;
+        height: 100%;
+        border-radius: 5px;
+        border: #c7c7c7 2px solid;
+        padding: 1rem;
+        display: flex;
+        flex-direction: column;
+        margin: 0 0 1rem 0;
+    }
+
+    .works-content-container P{
+        font-size: .8rem;
+    }
+
+    .works-display{
+        display: flex;
+        width: 100%;
+        object-fit: contain;
+        margin: 0;
+        padding: 0;
+        opacity: .5;
+    }
+}
+
+@media screen and (width: 1024px) and (height: 1366px){
+    #works{
+        overflow-x: hidden;
+        margin: 1rem 0 2rem 0;
+    }
+
+    .works-header{
+        max-width: 90vw;
+    }
+    
+    .works-header h1{
+        margin: 0.2rem 0;
+        font-size: 4rem;
+        margin-bottom: 1.5rem;
+    }
+
+    .works-header h2{
+        margin: 0.2rem 0;
+        font-size: 2rem;
+    }
+
+    
+    .works-content-container{
+        width: 100%;
+        max-width: 90vw;
+        height: 100%;
+        border-radius: 5px;
+        border: #c7c7c7 2px solid;
+        padding: 1rem;
+        display: flex;
+        flex-direction: column;
+        margin: 0 0 1rem 0;
+    }
+
+    .works-content-container P{
+        font-size: .8rem;
+    }
+
+    .works-display{
+        display: flex;
+        width: 100%;
+        object-fit: contain;
+        margin: 0;
+        padding: 0;
+        opacity: .5;
+    }
+}
