--- a/portfolio/src/components/intro/intro.css
+++ b/portfolio/src/components/intro/intro.css
@@ -54,10 +54,12 @@
 }
 
 .intro-button{
+    width: 10rem;
+    background-color: pink;
     background: #333333;
     margin: 1rem 0;
     margin-right: 1rem;
-    padding: 0.75rem 1.6rem;
+    padding: 0.75rem 1.5rem;
     color:white;
     border:none;
     border-radius: 10px;
@@ -166,9 +168,19 @@
         width:40%;
     }
 
+
     .intro-button{
+        width: 10rem;
+        background-color: pink;
+        background: #333333;
         margin: .5rem 0;
+        margin-right: 1rem;
         padding: 0.6rem 1.0rem;
+        color:white;
+        border:none;
+        border-radius: 10px;
+        cursor: pointer;
+        transition: transform 0.3s ease;
     }
 
     .intro-content-link{
@@ -198,7 +210,7 @@
     
 }
 
-@media screen and (max-width: 1280px) and (min-width: 1024px){
+@media screen and (max-width: 1280px) and (min-width: 1100px){
     .intro-photo{
         position:absolute;
         top:4rem;
@@ -232,9 +244,19 @@
     }
 
     .intro-button{
+        width: 10rem;
+        background-color: pink;
+        background: #333333;
         margin: .5rem 0;
+        margin-right: 1rem;
         padding: 0.6rem 1.0rem;
+        color:white;
+        border:none;
+        border-radius: 10px;
+        cursor: pointer;
+        transition: transform 0.3s ease;
     }
+    
 
     .intro-content-link{
         /* background-color: pink; */
@@ -295,8 +317,17 @@
     }
 
     .intro-button{
+        width: 9rem;
+        background-color: pink;
+        background: #333333;
         margin: .5rem 0;
-        padding: 0.6rem 1.0rem;
+        margin-right: 1rem;
+        padding: 0.6rem .7rem;
+        color:white;
+        border:none;
+        border-radius: 10px;
+        cursor: pointer;
+        transition: transform 0.3s ease;
     }
 
     .intro-content-link{
@@ -350,12 +381,17 @@
     }
 
     .intro-button{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: .7rem;
+        width: 10rem;
+        background-color: pink;
+        background: #333333;
         margin: .5rem 0;
-        padding: 0.6rem 1.1rem;
+        margin-right: 1rem;
+        padding: 0.6rem 1.0rem;
+        color:white;
+        border:none;
+        border-radius: 10px;
+        cursor: pointer;
+        transition: transform 0.3s ease;
     }
 
     .intro-content-link{
@@ -419,6 +455,7 @@
     }
 
     .intro-button{
+        width: 10rem;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -558,5 +595,228 @@
     #intro-typing{
         font-size: .9rem;
     }
+}
 
+
+@media screen and (width: 414px) and (height: 896px){
+    .intro-content-body{
+        width:70%;
+        margin-top: -22rem;
+    }
+    .intro-text-intro {
+        font-size: 2.4rem;
+        font-weight: 800;
+        margin:0;
+        margin-bottom: -20px;
+    }
+    
+    .intro-text-name{
+        font-size: 2.4rem;
+        font-weight: 800;
+        color:#2e5090;
+        margin:0;
+    }
+    
+    .intro-text-sub{
+        font-size: .9rem;
+        font-weight: 200;
+        margin-top: -10px;
+    }
+
+    #intro-typing{
+        font-size: .9rem;
+    }
+}
+
+@media screen and (width: 430px) and (height: 932px){
+    .intro-content-body{
+        width:70%;
+        margin-top: -23rem;
+    }
+    .intro-text-intro {
+        font-size: 2.4rem;
+        font-weight: 800;
+        margin:0;
+        margin-bottom: -20px;
+    }
+    
+    .intro-text-name{
+        font-size: 2.4rem;
+        font-weight: 800;
+        color:#2e5090;
+        margin:0;
+    }
+    
+    .intro-text-sub{
+        font-size: .9rem;
+        font-weight: 200;
+        margin-top: -10px;
+    }
+
+    #intro-typing{
+        font-size: .9rem;
+    }
+}
+
+@media screen and (width: 768px) and (height: 1024px){
+    .intro-photo{
+        position:absolute;
+        top:22rem;
+        right: 0;
+        z-index: -1;
+        object-fit: cover;
+        height:60%;
+        width: 90%;
+        overflow-x: hidden;  /* Prevent horizontal scrolling */
+    }
+
+    .intro-content-body{
+        width:70%;
+        margin-top: -28rem;
+    }
+
+    .intro-text-intro {
+        font-size: 3.6rem;
+        font-weight: 800;
+        margin:0;
+        margin-bottom: -20px;
+    }
+    
+    .intro-text-name{
+        font-size: 3.6rem;
+        font-weight: 800;
+        color:#2e5090;
+        margin:0;
+    }
+    
+    .intro-text-sub{
+        font-size: 1.4rem;
+        font-weight: 200;
+        margin-top: -10px;
+    }
+
+    #intro-typing{
+        font-size: 1.4rem;
+    }
+}
+
+@media screen and (width: 820px) and (height: 1180px){
+    .intro-photo{
+        position:absolute;
+        top:24rem;
+        right: 0;
+        z-index: -1;
+        object-fit: cover;
+        height:60%;
+        width: 90%;
+        overflow-x: hidden;  /* Prevent horizontal scrolling */
+    }
+
+    .intro-content-body{
+        width:70%;
+        margin-top: -30rem;
+    }
+
+    .intro-button{
+        width: 10rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: .7rem;
+        margin: .5rem 1rem .5rem 0;
+        padding: 0.6rem 1.8rem;
+    }
+
+    .intro-text-intro {
+        font-size: 3.8rem;
+        font-weight: 800;
+        margin:0;
+        margin-bottom: -20px;
+    }
+    
+    .intro-text-name{
+        font-size: 3.8rem;
+        font-weight: 800;
+        color:#2e5090;
+        margin:0;
+    }
+    
+    .intro-text-sub{
+        font-size: 1.5rem;
+        font-weight: 200;
+        margin-top: -10px;
+    }
+
+    #intro-typing{
+        font-size: 1.5rem;
+    }
+}
+
+@media screen and (width: 1024px) and (height: 1366px){
+    .intro-photo{
+        position:absolute;
+        top:28rem;
+        right: 0;
+        z-index: -1;
+        object-fit: cover;
+        height:60%;
+        width: 87%;
+        overflow-x: hidden;  /* Prevent horizontal scrolling */
+    }
+
+    .intro-content{
+        width: 100%;
+        max-width: 90vw;
+        margin:0;
+    }
+
+    .intro-content-link{
+        margin: 5px 0;
+        width: 30%;
+        display: flex;
+        flex-direction: row;
+        height: auto;
+        align-items: center;
+        /* justify-content: space-between; */
+    }
+
+    .intro-button{
+        width: 10rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: .7rem;
+        margin: .5rem 1rem 0.5rem 0;
+        padding: 0.6rem 1.8rem;
+    }
+
+
+    .intro-content-body{
+        width:70%;
+        margin-top: -36rem;
+    }
+
+    .intro-text-intro {
+        font-size: 5.2rem;
+        font-weight: 800;
+        margin:0;
+        margin-bottom: -20px;
+    }
+    
+    .intro-text-name{
+        font-size: 5.2rem;
+        font-weight: 800;
+        color:#2e5090;
+        margin:0;
+    }
+    
+    .intro-text-sub{
+        font-size: 2rem;
+        font-weight: 200;
+        margin-top: -10px;
+    }
+
+    #intro-typing{
+        font-size: 2rem;
+    }
 }
