--- a/portfolio/src/components/Works/works.css
+++ b/portfolio/src/components/Works/works.css
@@ -158,7 +158,7 @@
     }
 }
 
-@media screen and (width: 820px) and (height: 1180px){
+@media screen and (min-width: 770px) and (max-width: 870px){
     #works{
         overflow-x: hidden;
         margin: 1rem 0 2rem 0;
