--- a/portfolio/src/components/outro/outro.css
+++ b/portfolio/src/components/outro/outro.css
@@ -249,7 +249,7 @@
 
 }
 
-@media screen and (width: 820px) and (height: 1180px){
+@media screen and (min-width: 770px) and (max-width: 870px){
     #outro{
         overflow-x: hidden;
     }
