--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -38,3 +38,16 @@ body {
   opacity: 1;
   transform: translateY(0);
 }
+
+@keyframes fade-out {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+path {
+  animation: fade-out 1s linear;
+}
