--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Geologica:wght@100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Charm:wght@400;700&display=swap');
 
 @tailwind base;
@@ -5,17 +6,21 @@
 @tailwind utilities;
 
 :root {
-    --background: #010101;
-    --foreground: #ffffff;
+    --background: #f1f1f1;
+    --foreground: #010101;
 }
 
-body {
+html, body {
   color: var(--foreground);
   background: var(--background);
-  font-family: 'Outfit', 'Charm', 'Arial', 'Helvetica', 'sans-serif';
+  font-family: 'Geologica', 'Charm', 'Arial', 'Helvetica', 'sans-serif';
 }
 
-/* Add this in your Tailwind CSS or a global CSS file */
+.font-geologica {
+  font-family: 'Geologica', sans-serif !important; /* Ensure specificity */
+}
+
+/* loading screen */
 @keyframes pulse {
   0%, 100% {
     opacity: 1;
@@ -24,30 +29,106 @@ body {
     opacity: 0.5;
   }
 }
-.fade-in-out {
+.animate-pulse-1 {
   animation: pulse 0.4s infinite;
 }
 
-.fade-in {
+/* menu button */
+  /* burger to arrow */
+.hamburger-label:hover .line1 {
+  transform: rotate(45deg) translate(1.05rem, -0.55rem) scaleX(0.75);
+}
+
+.hamburger-label:hover .line3 {
+  transform: rotate(-45deg) translate(1.05rem, 0.55rem) scaleX(0.75);
+}
+
+.hamburger-label:hover .line1-small {
+  transform: rotate(45deg) translate(0.78rem, -0.45rem) scaleX(0.55);
+}
+
+.hamburger-label:hover .line3-small {
+  transform: rotate(-45deg) translate(0.78rem, 0.45rem) scaleX(0.55);
+}
+
+
+  /* menu letter animation */
+.ml6 {
+  position: relative;
+}
+
+.ml6 .text-wrapper {
+  position: relative;
+  display: inline-block;
+  padding-top: 0.2em;
+  padding-right: 0.05em;
+  padding-bottom: 0.1em;
+  overflow: hidden;
+}
+
+.ml6 .letter {
+  display: inline-block;
+  line-height: 1em;
+}
+
+/* dropdown */
+  /* text animation */
+.ml11 {
+
+}
+
+.ml11 .text-wrapper {
+  position: relative;
+  display: inline-block;
+  padding-top: 0.1em;
+  padding-right: 0.5em;
+  padding-bottom: 0.15em;
+}
+
+.ml11 .line {
   opacity: 0;
-  transform: translateY(20px);
-  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+  position: absolute;
+  left: 0;
+  height: 100%;
+  width: 3px;
+  background-color: #fff;
+  transform-origin: 0 50%;
 }
 
-.fade-in.show {
-  opacity: 1;
-  transform: translateY(0);
+.ml11 .line1 { 
+  top: 0; 
+  left: 0;
 }
 
-@keyframes fade-out {
+.ml11 .letter {
+  display: inline-block;
+  line-height: 1em;
+}
+
+/* dropdown animation */
+@keyframes slideDown {
   from {
-    opacity: 1;
+    transform: translateY(-100%);
   }
   to {
-    opacity: 0;
+    transform: translateY(0);
   }
 }
 
-path {
-  animation: fade-out 1s linear;
+@keyframes slideUp {
+  from {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(-100%);
+  }
 }
+
+.slide-down {
+  animation: slideDown 0.7s ease-out forwards;
+}
+
+.slide-up {
+  animation: slideUp 0.7s ease-out forwards;
+}
+
