--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -155,9 +155,10 @@ html, body {
 
 .background-overlay {
   position: absolute;
+  z-index: 2;
   inset: 0;
   background-color: #010101;
-  transform: translateY(100%);
+  transform: translateY(300%);
   transition: transform 0.4s ease-in-out; /* slide-down speed */
 }
 
@@ -169,4 +170,40 @@ html, body {
 .relative.z-10 {
   position: relative;
   z-index: 10;
+}
+
+
+.arrow-right {
+  transform: translateX(0);
+  opacity: 1;
+  transition: transform 1.2s ease, opacity 1.2s ease;
+}
+
+.arrow-down {
+  transform: translateY(-100%);
+  opacity: 0;
+  transition: transform 0.1s ease, opacity 0.1s ease;
+}
+
+.group:hover .arrow-right {
+  transform: translateX(50%);
+  opacity: 0;
+  transition: transform 0.2s ease, opacity 0.2s ease;
+}
+
+.group:hover .arrow-down {
+  transform: translateY(0);
+  opacity: 1;
+  transition: transform 0.6s ease, opacity 0.6s ease;
+}
+
+.arrow {
+  transform: translateX(-100%);
+  opacity: 0;
+  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+}
+
+.group:hover .arrow {
+  transform: translateX(0);
+  opacity: 1;
 }
