--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -158,7 +158,7 @@ html, body {
   z-index: 2;
   inset: 0;
   background-color: #010101;
-  transform: translateY(350%);
+  transform: translateY(600%);
   transition: transform 0.4s ease-in-out; /* slide-down speed */
 }
 
@@ -170,6 +170,11 @@ html, body {
 .relative.z-10 {
   position: relative;
   z-index: 10;
+}
+
+.collapse-content a {
+  position: relative;
+  z-index: 50;
 }
 
 
